--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <img src="./assets/images/movie-ranking.png" height="200" alt="Movie Ranking">
 
       <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
-      <img src="https://raw.githubusercontent.com/appbrewery/webdev/main/birthday-cake3.4.jpeg" height="200" alt="Birthday Invite">
+      <img src="./assets/images/birthday-invite.png" height="200" alt="Birthday Invite">
       <hr>
       <a href="./public/about.html">About me </a>
       <a href="./public/contact.html">Contact me </a>
